--- a/X/vnstati.html
+++ b/X/vnstati.html
@@ -17,6 +17,7 @@ small { font-size: 8px; color: #cbcbcb; }
 <body bgcolor="#ffffff">
 
 <img src="vnstat_s.png" border="0" alt="summary"><br>
+<img src="vnstat_5g.png" border="0" alt="5 minutes graphic"><br>
 <img src="vnstat_5.png" border="0" alt="5 minutes"><br>
 <img src="vnstat_h.png" border="0" alt="hourly"><br>
 <img src="vnstat_d.png" border="0" alt="daily"><br>
