--- a/X/imapsync_form_extra_free.html
+++ b/X/imapsync_form_extra_free.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- $Id: imapsync_form_extra_free.html,v 1.23 2021/12/18 19:03:46 gilles Exp gilles $ -->
+<!-- $Id: imapsync_form_extra_free.html,v 1.27 2022/02/20 09:37:45 gilles Exp gilles $ -->
 
 <html lang="en" id="top">
 
@@ -161,6 +161,9 @@ It's <b>ok</b> if you <b>don't</b> have a VAT number.<br />
                         <datalist id="servers1">
                         <option value="imap.gmail.com">
                         <option value="outlook.office365.com">
+                        <option value="imap.hostinger.com">
+                        <option value="ssl0.ovh.net">
+                        <option value="email-ssl.com.br">
                         <option value="imap.mail.yahoo.com">
                     </datalist>
                 </div>
@@ -289,6 +292,9 @@ It's <b>ok</b> if you <b>don't</b> have a VAT number.<br />
                      <datalist id="servers2">
                         <option value="imap.gmail.com">
                         <option value="outlook.office365.com">
+                        <option value="imap.hostinger.com">
+                        <option value="ssl0.ovh.net">
+                        <option value="email-ssl.com.br">
                         <option value="imap.mail.yahoo.com">
                      </datalist>
                 </div>
@@ -460,36 +466,9 @@ It's <b>ok</b> if you <b>don't</b> have a VAT number.<br />
         <hr>
         <p class="text-center">
         Imapsync <b>Online Status</b> over the <b>last 24h</b><br>
-        <img id="status_24h" class="img-responsive center-block" alt="Imapsync Online Status"  src="imapsync_online_status_24h_1200x70.png">
+        <a href="imapsync_online_status.html"><img id="status_24h" class="img-responsive center-block" alt="Imapsync Online Status over the last 24h"  src="https://sup.lamiral.info/dbmon/cgi-bin/rrdview.cgi?child=yes&rrdfile=%2Fvar%2Ftmp%2Fdbmon%2Ftests%2Frrdbases%2Flocalhost~2583~LAMIRAL~Imapsync_Online~LAMIRAL%2CImapsync_Online~opstatus~300~.rrd;interval_vue=p86400;date_given_by=now;date_means=end;dsname=opstatus;width=1200;hight=70;lower=0;upper=100;rigid=on;Beautiful%20Image%21.x=128;Beautiful%20Image%21.y=30;title=Service%20Status;owner=Imapsync_Online;caption=Status%20in%20%25;monitor=https.rrdrt.monitor%20--rrdrt%20imapsync.lamiral.info%2Fcgi-bin%2Fimapsync%20%3B%3B">
+        </a>
         </p>
-        
-        <p class="text-center">
-        Imapsync <b>Online Status</b> over the <b>last week</b><br>
-        <img id="status_7d" class="img-responsive center-block" alt="Imapsync Online Status"  src="imapsync_online_status_7d_1200x70.png">
-        </p>
-
-        <p class="text-center">
-        Imapsync <b>Online Status</b> over the <b>last two months</b><br>
-        <img id="status_2m" class="img-responsive center-block" alt="Imapsync Online Status"  src="imapsync_online_status_2months_1200x70.png"><br>
-        </p>
-
-
-<!--
-Uncomment the following when the data are available
--->
-<!--
-
-        <p class="text-center">
-        Imapsync <b>Online Status</b> over the <b>last year</b><br>
-        <img id="status_1y" class="img-responsive center-block" alt="Imapsync Online Status"  src="https://lstu.fr/imapsync_online_status_1year_1200x70"><br>
-        </p>
-
-        <p class="text-center">
-        Imapsync <b>Online Status</b> over the <b>last 10 years</b><br>
-        <img id="status_10y" class="img-responsive center-block" alt="Imapsync Online Status"  src="https://lstu.fr/imapsync_online_status_10years_1200x70-2"><br>
-        </p>
--->
-
 </div>
 
 
@@ -522,7 +501,7 @@ monitor page powered by the <a href="https://hetrixtools.com/uptime-monitor/4143
             <!-- <a href="#buttons"  class="btn btn-info scripton" role="button">Consoles</a> -->
             <a href="#bottom" title="Bottom of the page" class="btn btn-info active" role="button">Bottom</a>
             <br>
-        <small> ($Id: imapsync_form_extra_free.html,v 1.23 2021/12/18 19:03:46 gilles Exp gilles $) </small><br>
+        <small> ($Id: imapsync_form_extra_free.html,v 1.27 2022/02/20 09:37:45 gilles Exp gilles $) </small><br>
         Terms and conditions for anything: <a href="https://imapsync.lamiral.info/LICENSE">No limits to do anything with this work and this license!</a><br>
         </div>
     </div>
